// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonRow generates a button 1`] = `
<div
  className="button-row"
>
  <ul
    className="p-inline-list"
  >
    <li
      className="p-inline-list__item"
      key="0"
    >
      <Button
        type="submit"
      >
        My button
      </Button>
    </li>
  </ul>
</div>
`;

exports[`ButtonRow generates more than one button 1`] = `
<div
  className="button-row"
>
  <ul
    className="p-inline-list"
  >
    <li
      className="p-inline-list__item"
      key="0"
    >
      <Button
        type="submit"
      >
        My first button
      </Button>
    </li>
    <li
      className="p-inline-list__item"
      key="1"
    >
      <Button
        type="submit"
      >
        My second button
      </Button>
    </li>
  </ul>
</div>
`;
